[package]
name = "click_dat"
version = "1.0.0"
authors = ["Hansen <tiujanhansen@gmail.com>"]
edition = "2024"
license = "MIT"
description = "An autoclicker for personal use"
readme = "README.md"
repository = "https://github.com/itlogsandwich/click-dat"
keywords = ["cli", "click", "auto"]
categories = ["command-line-utilities"]

[dependencies]
eframe = { version = "=0.34.2", default-features = false, features = ["default_fonts", "glow"] }
enigo = "0.6.1"
env_logger = "0.11.10"
inputbot = "0.6.0"
